--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 		<script type="text/javascript" src="introFin.js"></script>
 		<div class="container">
-
-			<h1>ASTROCODEX MAPPA GALAXIAE</h1>
+  
+			<h1><a style="text-decoration: none; font-size:32px" href="project.html">ASTROCODEX MAPPA GALAXIAE</a></h1>
 			<div class='spandiv'>
 				<span class="a">
 					<h2 class="Count"></h2>
