--- a/project.html
+++ b/project.html
@@ -31,8 +31,10 @@
 
 
 <body>
-  <h1>ASTROCODEX MAPPA GALAXIAE</h1>
-  <div style="width:60%; margin-left:30px; margin-top:50px">
+  <div style="width:650px">
+    <h1 style="margin-top:10px"><a style="text-decoration: none; font-size:32px; margin-top:20px" href="index.html">ASTROCODEX MAPPA GALAXIAE</a></h1>
+  </div>
+  <div style="width:60%; margin-left:80px">
     <h4>Project Team</h4>
     <p class="writeup">Ruijun Liu, Huopu Zhang</p>
     <h4>Project Description</h4>
