--- a/location_index.html
+++ b/location_index.html
@@ -9,7 +9,7 @@
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <title>chart 3</title>
+    <title>Codex Galaxiae</title>
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="style_location.css" >
