--- a/project.html
+++ b/project.html
@@ -46,6 +46,8 @@ Aladdin Lite API.</p>
     <p class="writeup">The HYG V3 Dataset:</p>
     <p class="writeup">https://github.com/astronexus/HYG-Database/blob/master/hygdata_v3.csv</p>
     <h4>Links</h4>
+    <a href="https://github.com/Kharasso/codex_galaxiae">Github Page</a>
+    <p></p>
     <a href="https://youtu.be/5qBPBKarNQ8">Video Demostration</a>
     <p></p>
     <a href="https://docs.google.com/document/d/e/2PACX-1vStZ4pyDYNqUB6IpKPPdyKmWhJ7dm0tg5UUBil9Q4k_BWPTYakj9pjymW0nm4psl_7MWPE21PPTUFmz/pub">Project Paper</a>
